--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a exact href = "./index.html">Главная</a >
                 <a href = "./modules/practice.html" replace >Практика</a >
                 <a href = "./modules/controle.html">Контроль знаний</a >
-                <a href = "./modules/control.html">Материал</a >
+                <a href = "./modules/materials.html">Материал</a >
                 <a href = "./modules/gallery.html">Фото и видео</a >
             </nav>
     </div>
