--- a/modules/practice.html
+++ b/modules/practice.html
@@ -110,10 +110,10 @@
 
             <nav class = "navigation">
                 <a exact href = "./index.html">Главная</a >
-                <a href = "./modules/practice" replace >Практика</a >
-                <a href = "./modules/controle">Контроль знаний</a >
-                <a href = "./modules/control">Материал</a >
-                <a href = "./modules/gallery">Фото и видео</a >
+                <a href = "./modules/practice.html" replace >Практика</a >
+                <a href = "./modules/controle.html">Контроль знаний</a >
+                <a href = "./modules/materials.html">Материал</a >
+                <a href = "./modules/gallery.html">Фото и видео</a >
             </nav>
     </div>
     <script src='/data/regulations.js'></script>
