--- a/modules/practice.html
+++ b/modules/practice.html
@@ -109,11 +109,11 @@
             <a class = "by" href = "./modules/PowerBy">BY</a>
 
             <nav class = "navigation">
-                <a exact href = "./index.html">Главная</a >
-                <a href = "./modules/practice.html" replace >Практика</a >
-                <a href = "./modules/controle.html">Контроль знаний</a >
-                <a href = "./modules/materials.html">Материал</a >
-                <a href = "./modules/gallery.html">Фото и видео</a >
+                <a exact href = "../index.html">Главная</a >
+                <a href = "./practice.html">Практика</a >
+                <a href = "./controle.html">Контроль знаний</a >
+                <a href = "./materials.html">Материал</a >
+                <a href = "./gallery.html">Фото и видео</a >
             </nav>
     </div>
     <script src='/data/regulations.js'></script>
