--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Фотография будет заменена. Художник на даче</p>
             </div>
 
-            <a class = "by" href = "./modules/PowerBy">BY</a>
+            <a class = "by" href = "./modules/power.html">BY</a>
 
             <nav class = "navigation">
                 <a exact href = "./index.html">Главная</a >
