--- a/modules/materials.html
+++ b/modules/materials.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <a class = "by" href = "./modules/PowerBy">BY</a>
+            <a class = "by" href = "/power">BY</a>
 
             <nav class = "navigation">
                 <a exact href = "../index.html">Главная</a >
