--- a/modules/practice.html
+++ b/modules/practice.html
@@ -106,7 +106,7 @@
 
             <!-- Блок конец -->
 
-            <a class = "by" href = "./modules/PowerBy">BY</a>
+            <a class = "by" href = "./power">BY</a>
 
             <nav class = "navigation">
                 <a exact href = "../index.html">Главная</a >
