--- a/index.html
+++ b/index.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
+    <meta name="description" content="Web site created using create-react-app"/>
     <link rel="stylesheet" href="./style.css">
 
     <title>БГАС: Электронный учебно-методический комплекс</title>
 </head>
-
 <body>
-    <div id="root">
-        <section class="index1">
-            <div class="index2">
-              <div class = "textBody">
-                  <img src = "./images/bsac_logo.png" class = "imageBody"></img>
-                  <h1>Электронный учебно-методический комплекс</h1>
-                  <p>по дисциплине</p>
-                  <h2>"Специальная подготовка"</h2>
-                  <p>для специальности</p>
-                  <p>ВУС 403290 - Начальник аппаратной</p>
-              </div>
+<div id="root">
+    <section class="index1">
+        <div class="index2">
+            <div class="textBody">
+                <img src="./images/bsac_logo.png" class="imageBody"/>
+                <h1>Электронный учебно-методический комплекс</h1>
+                <p>по дисциплине</p>
+                <h2>"Специальная подготовка"</h2>
+                <p>для специальности</p>
+                <p>ВУС 403290 - Начальник аппаратной</p>
             </div>
-            
-            <div class = "welcome">
-                <h1>Аппаратная П-178МБ</h1>
-                <img src = './images/logo.png'/>
-                <p>Фотография будет заменена. Художник на даче</p>
-            </div>
+        </div>
 
-            <a class = "by" href = "./modules/power.html">BY</a>
+        <div class="welcome">
+            <h1>Аппаратная П-178МБ</h1>
+            <img src='./images/logo.png'/>
+            <p>Фотография будет заменена. Художник на даче</p>
+        </div>
 
-            <nav class = "navigation">
-                <a exact href = "./index.html">Главная</a >
-                <a href = "./modules/practice.html" replace >Практика</a >
-                <a href = "./modules/controle.html">Контроль знаний</a >
-                <a href = "./modules/materials.html">Материал</a >
-                <a href = "./modules/gallery.html">Фото и видео</a >
-            </nav>
-    </div>
+        <a class="by" href="./modules/power.html">BY</a>
+
+        <nav class="navigation">
+            <a href="./index.html">Главная</a>
+            <a href="./modules/practice.html">Практика</a>
+            <a href="./modules/control.html">Контроль знаний</a>
+            <a href="./modules/materials.html">Материал</a>
+            <a href="./modules/gallery.html">Фото и видео</a>
+        </nav>
+    </section>
+</div>
 </body>
-
 </html>
