--- a/modules/power.html
+++ b/modules/power.html
@@ -24,8 +24,8 @@
         </div>
 
         <div class="ContainerProgramm">
-            <h4>Разработано BY</h4>
-            <img src="../images/logo.png"/>
+            <h4>Разработано</h4>
+            <code>Леонид Лазута</code>
             <h4>Под руководством</h4>
             <code class="admin">Способ Сергей Павлович</code>
             <h4>Совместно с</h4>
