--- a/modules/practice.html
+++ b/modules/practice.html
@@ -140,7 +140,7 @@
     </section>
 </div>
 
-<script src='/data/regulations.js'></script>
+<script src='../data/regulations.js'></script>
 <script type="text/javascript">
     let assessments = [];
     let minutes = 0;
