--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
+    <script src="./app.js"></script>
     <link rel="stylesheet" href="./style.css">
 
     <title>БГАС: Электронный учебно-методический комплекс</title>
@@ -25,8 +26,7 @@
 
         <div class="welcome">
             <h1>Аппаратная П-178МБ</h1>
-            <img src='./images/logo.png'/>
-            <p>Фотография будет заменена. Художник на даче</p>
+            <img src='./images/car.png'/>
         </div>
 
         <a class="by" href="./modules/power.html">BY</a>
@@ -39,6 +39,13 @@
             <a href="./modules/gallery.html">Фото и видео</a>
         </nav>
     </section>
+
+    <div class="preloader">
+        <div class="preloader__row">
+          <div class="preloader__item"></div>
+          <div class="preloader__item"></div>
+        </div>
+      </div>
 </div>
 </body>
 </html>
