--- a/modules/materials.html
+++ b/modules/materials.html
@@ -28,55 +28,50 @@
                 <p class="topic">Тема 1: Основы построения многоканальных систем</p>
 
                 <div class="theory-el">
-                    <p><a href="/lectures/1" target="_blank">Лекция 1. Введение в изучаемую дисциплину. Основные
+                    <p><a href="../lectures/1/index.html" target="_blank">Лекция 1. Введение в изучаемую дисциплину. Основные
                         характеристики и параметры каналов свяхи цифровыъ потокво.</a></p>
-                    <p><a href="/lectures/2" target="_blank">Лекция 2. Основы проводной связи.</a></p>
-                    <p><a href="/lectures/2.2" target="_blank">Лекция 3. Общие сведеня о полевых кабельных линиях
+                    <p><a href="../lectures/2/index.html" target="_blank">Лекция 2. Основы проводной связи.</a></p>
+                    <p><a href="../lectures/2.2/index.html" target="_blank">Лекция 3. Общие сведеня о полевых кабельных линиях
                         связи.</a></p>
                 </div>
 
                 <p class="topic">Тема 2: Устройство и эксплуотация многоканальных систем</p>
 
                 <div class="theory-el">
-                    <p><a href="/lectures/3" target="_blank">ПЗ 1. Изготовления сростков на полевых кабелях связи.</a>
+                    <p><a href="../lectures/3/index.html" target="_blank">ПЗ 1. Изготовления сростков на полевых кабелях связи.</a>
                     </p>
-                    <p><a href="/lectures/4" target="_blank">ПЗ 2. Устройство аппаратной МБ, ЦБ, АТС.</a></p>
-                    <p><a href="/lectures/5" target="_blank">ПЗ 3. Подготовка полевого телефонного коммутатора к работе
+                    <p><a href="../lectures/4/index.html" target="_blank">ПЗ 2. Устройство аппаратной МБ, ЦБ, АТС.</a></p>
+                    <p><a href="../lectures/5/index.html" target="_blank">ПЗ 3. Подготовка полевого телефонного коммутатора к работе
                         и проверка его исправности. Включение линии в коммутатор и установление связи.</a></p>
-                    <p><a href="/lectures/6" target="_blank">ПЗ 4. Общие сведения и устройство аппаратной П-178МБ.</a>
+                    <p><a href="../lectures/6/index.html" target="_blank">ПЗ 4. Общие сведения и устройство аппаратной П-178МБ.</a>
                     </p>
-                    <p><a href="/lectures/7" target="_blank">ПЗ 5. Вводно-кабельное оборудование аппаратной П-178МБ.</a>
+                    <p><a href="../lectures/7/index.html" target="_blank">ПЗ 5. Вводно-кабельное оборудование аппаратной П-178МБ.</a>
                     </p>
-                    <p><a href="/lectures/8" target="_blank">ПЗ 6. Цифровые автоматические телефоннеы станции.</a></p>
-                    <p><a href="/lectures/9" target="_blank">ПЗ 7. Подготовка к работе АТСЭ ФМ.</a></p>
-                    <p><a href="/lectures/10" target="_blank">ПЗ 8. Измерение основных электрических характеристик КТЧ,
+                    <p><a href="../lectures/8/index.html" target="_blank">ПЗ 6. Цифровые автоматические телефоннеы станции.</a></p>
+                    <p><a href="../lectures/9/index.html" target="_blank">ПЗ 7. Подготовка к работе АТСЭ ФМ.</a></p>
+                    <p><a href="../lectures/10/index.html" target="_blank">ПЗ 8. Измерение основных электрических характеристик КТЧ,
                         цфровых потоков и оценка их качества.</a></p>
-                    <p><a href="/lectures/11" target="_blank">ПЗ 9. Состав, назначение и общее устройство штатных
+                    <p><a href="../lectures/11/index.html" target="_blank">ПЗ 9. Состав, назначение и общее устройство штатных
                         измерительных приборов и переговорно - назывных устройств.</a></p>
-                    {/* ???? */}
-                    <p><a href="/lectures/11" target="_blank">ПЗ 10. Эксплуотация измерительного оборудвоания цифоровых
+                    <p><a href="../lectures/11/index.html" target="_blank">ПЗ 10. Эксплуотация измерительного оборудвоания цифоровых
                         каналов и трактов.</a></p>
 
-                    {/* <!-- Гусев --> */}
-                    <p><a href="/lectures/12" target="_blank">ПЗ 11. НАЗНАЧЕНИЕ, СОСТАВ, ОСНОВНЫЕ ТАКТИКО-ТЕХНИЧЕСКИЕ
+                    <p><a href="../lectures/12/index.html" target="_blank">ПЗ 11. НАЗНАЧЕНИЕ, СОСТАВ, ОСНОВНЫЕ ТАКТИКО-ТЕХНИЧЕСКИЕ
                         ХАРАКТЕРИСТИКИ И РЕЖИМЫ РАБОТЫ СИСТЕМЫ MEGATRANS-3M</a></p>
-                    {/* <p><a href="/lectures/12" target="_blank">ПЗ 11. Общие сведения об аппаратуре "Megatrans-3M"</a>
-                </p> */}
 
-                    {/* <!-- Павлють --> */}
-                    <p><a href="/lectures/13" target="_blank">ПЗ 12. Аппаратура цифровых систем передачи по
+                    <p><a href="../lectures/13/index.html" target="_blank">ПЗ 12. Аппаратура цифровых систем передачи по
                         меднокабельным симметричным линиям связи. Назначение, состав, технические характеристики и
                         режимы работы аппаратуры П-341.</a></p>
 
-                    <p><a href="/lectures/14" target="_blank">ПЗ 13. Модемное оборудование. Сравнительная характеристика
+                    <p><a href="../lectures/14/index.html" target="_blank">ПЗ 13. Модемное оборудование. Сравнительная характеристика
                         модемного оборудования. Режимы работы и система команд аппаратуры Orion-2</a></p>
-                    <p><a href="/lectures/15" target="_blank">ПЗ 14. Порядок и условия выполнения нормативов и элементов
+                    <p><a href="../lectures/15/index.html" target="_blank">ПЗ 14. Порядок и условия выполнения нормативов и элементов
                         учебных задач на аппаратной П-178МБ. Порядок определения отметки.</a></p>
-                    <p><a href="/lectures/16" target="_blank">ПЗ 15. Эксплуатация оборудования аппаратной П-178МБ в
+                    <p><a href="../lectures/16/index.html" target="_blank">ПЗ 15. Эксплуатация оборудования аппаратной П-178МБ в
                         основных режимах работы.</a></p>
-                    <p><a href="/lectures/17" target="_blank">ПЗ 16. Тренировка выполнения нормативов на аппаратной
+                    <p><a href="../lectures/17/index.html" target="_blank">ПЗ 16. Тренировка выполнения нормативов на аппаратной
                         П-178МБ</a></p>
-                    <p><a href="/lectures/18" target="_blank">ПЗ 17. Выполнение нормативов на аппаратной П-178МБ.</a>
+                    <p><a href="../lectures/18/index.html" target="_blank">ПЗ 17. Выполнение нормативов на аппаратной П-178МБ.</a>
                     </p>
                 </div>
 
@@ -84,12 +79,12 @@
 
                 <div class="theory-el">
                     <p>
-                        <a href="/lectures/19" target="_blank">
+                        <a href="../lectures/19/index.html" target="_blank">
                             ПЗ 1. Техническое обслуживание аппаратной П-178МБ. Техническое обслуживание средств связи
                         </a>
                     </p>
                     <p>
-                        <a href="/lectures/20" target="_blank">
+                        <a href="../lectures/20/index.html" target="_blank">
                             ПЗ 2. Организация и проведение ежедневного технического обслуживания на аппаратной П-178МБ
                         </a>
                     </p>
@@ -97,7 +92,7 @@
             </div>
         </div>
 
-        <a class="by" href="./power.html">BY</a>
+        <a class = "by" href = "./modules/Power.html">BY</a>
 
         <nav class="navigation">
             <a href="../index.html">Главная</a>
